--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -33,12 +33,45 @@ text-transform: uppercase;
 }
 nav > ul {
 list-style: none;
+display: flex;
+justify-content: space-evenly;
+flex-direction: row;
+align-items: center;
+gap: 1rem;
 }
+section > form {
+display: grid;
+grid-template-columns: 1fr;
+row-gap: 1rem;
+column-gap: 1rem;
+}
+
+section#testimonios {
+display: flex;
+flex-wrap: wrap; 
+gap: 1rem;
+width: 100%;
+}
+#testimonios > h2 {
+
+flex: 0 0 100%;
+width: 100%;
+}
+
+#testimonios > article {
+flex: 1 1 calc(33.333% - 1rem);
+}
+
+    
+
+
 section {
 border: 0.2pt solid #cedddd;
 margin: 4px 2px 8px 2px;
 padding: 1.5% 0.8%;
 margin-bottom: 1.2rem;
+
 }
+
 
 
